# domin8

./: .dockerignore  .gitignore  .prettierignore  .vercelignore  AURA_SYSTEM_PLAN.md  Anchor.toml  CHOP.md  CLAUDE.md  CODEBASE_ANALYSIS.md  MOBILE.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_3_COMPLETION.md  PHASE_3_QUICK_REFERENCE.md  PLAN-lootbox.md  README.md  SWITCHBOARD_INTEGRATION_PLAN.md  android.keystore  app-release-bundle.aab  app-release-signed.apk  app-release-signed.apk.idsig  app-release-unsigned-aligned.apk  capacitor.config.ts  eslint.config.js  index.html  manifest-checksum.txt  nixpacks.toml  package.json  playwright.config.ts  twa-manifest.json  vite.config.ts
.next/: trace  trace-build
android/: capacitor.settings.gradle
app/: build.gradle
convex/: EVENT_DRIVEN_ARCHITECTURE.md  auras.ts  betEventListenerMutations.ts  betsMutations.ts  blockchainEventListener.ts  characters.ts  chopBotDetection.ts  chopJackpot.ts  chopLobbies.ts  chopSolo.ts  chopSoloActions.ts  cleanupService.ts  constants.ts  crons.ts  events.ts  (+33 more)
programs/chop_prgm/: Cargo.toml
programs/chop_prgm/src/: error.rs  lib.rs  state.rs
programs/chop_prgm/src/instructions/: cancel_lobby.rs  create_lobby.rs  end_game.rs  initialize_config.rs  join_lobby.rs  mod.rs
programs/domin8_1v1_prgm/: Cargo.toml
programs/domin8_1v1_prgm/src/: error.rs  lib.rs  state.rs  utils.rs
programs/domin8_1v1_prgm/src/instructions/: cancel_lobby.rs  create_lobby.rs  initialize_config.rs  join_lobby.rs  mod.rs  settle_lobby.rs  vrf_callback.rs
programs/domin8_1v1_prgm/tests/: integration_test.rs
(+295 files in other folders)
