[package]
name = "domin8_1v1_prgm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.1"
orao-solana-vrf = { version = "0.5", default-features = false, features = ["cpi"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
solana-program-test = "1.18"
solana-sdk = "1.18"
